envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/account.AccountService" }
                route:
                  cluster: account_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match: { prefix: "/market.MarketDataService" }
                route:
                  cluster: market_data_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match: { prefix: "/order.OrderManagementService" }
                route:
                  cluster: order_management_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match: { prefix: "/portfolio.PortfolioService" }
                route:
                  cluster: portfolio_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match: { prefix: "/matching.MatchingService" }
                route:
                  cluster: matching_engine_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: account_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: account_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: account-service
                port_value: 9001
  - name: market_data_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: market_data_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: market-data-service
                port_value: 9002
  - name: order_management_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: order_management_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: order-management-service
                port_value: 9004
  - name: portfolio_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: portfolio_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portfolio-service
                port_value: 9006
  - name: matching_engine_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: matching_engine_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: matching-engine-service
                port_value: 9007
